Fix doctype declaration and clean up script section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -77,9 +77,4 @@
           output.innerHTML = `<p>Response: ${JSON.stringify(data)}</p>`;
         }
       }catch(err){
-        output.innerHTML = `<p style='color:red'>Error: ${err.message}</p>`;
-      }
-    });
-  </script>
-</body>
-</html>
+        output.innerHTML
